fix z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -560,7 +560,7 @@ h3 {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background: black;
+  background: rgba(0, 0, 0, 0.9);
   animation: disapear 1.2s ease-out 2.5s forwards;
 }
 
@@ -611,6 +611,7 @@ h3 {
   }
   100% {
     opacity: 0;
+    z-index: -1;
   }
 }
 .header {
