--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    background: black;
+    background: rgba(0,0,0,.9);
     animation: disapear 1.2s ease-out 2.5s forwards;
 }
 
@@ -44,5 +44,6 @@
     }
     100% {
       opacity: 0;
+      z-index: -1;
     }
 }
